# context-harness

./: .gitignore  .registry-version  .release-please-manifest.json  404.html  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DOCS.md  Dockerfile  PROJECT-CONTEXT.md  QUICKSTART.md  README.md  commitlint.config.js  docker-compose.yml  index.html  mkdocs.yml  opencode.json  package-lock.json  package.json  pyproject.toml  release-please-config.json  sitemap.xml
.claude/agents/: context-harness.md
.context-harness/: README.md  mcp-configuration.md  test-enhanced-research-subagent.md
.context-harness/baseline/: discovery-report.json
.context-harness/rlm-workspace/: README.md
.context-harness/templates/: session-template.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-skill.md
.github/workflows/: auto-rebase.yml  ci.yml  cleanup-branches.yml  commitlint.yml  docs.yml  release.yml  sync-registry.yml  test-cli.yml  update-docs.lock.yml  update-docs.md  validate-skills.yml
.opencode/agent/: baseline-agents.md  baseline-answers.md  baseline-discovery.md  baseline-question-answer.md  baseline-questions.md  baseline-skill-answer.md  baseline-skills.md  compaction-guide.md  context-harness.md  contexts-subagent.md  docs-subagent.md  research-subagent.md
.opencode/command/: baseline.md  compact.md  ctx.md  issue.md  pr.md
SCAFFOLD_UPGRADE/: index.html
agent-install/: index.html
contributing/: index.html
docs/: SCAFFOLD_UPGRADE.md  agent-install.md  contributing.md  index.md
docs/contributing/: branch-management.md
docs/getting-started/: installation.md  quickstart.md
registry/: nginx.conf
scripts/: build-web.sh  sync-registry.py  validate_skills.py
search/: search_index.json
tests/: test_cli.py  test_completion.py  test_github_integration.py  test_oauth.py  test_skills.py  test_worktree.py
web/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
(+242 files in other folders)
