[project]
name = "context-harness"
dynamic = ["version"]
description = "CLI installer for the ContextHarness agent framework for OpenCode.ai"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Chris Martinez"}
]
keywords = ["cli", "agents", "opencode", "context-harness", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "questionary>=2.1.1",
]

[project.scripts]
context-harness = "context_harness.cli:main"

[project.urls]
Homepage = "https://github.com/co-labs-co/context-harness"
Repository = "https://github.com/co-labs-co/context-harness"
Issues = "https://github.com/co-labs-co/context-harness/issues"

[project.optional-dependencies]
# Secure token storage via system keyring (recommended for OAuth)
keyring = ["keyring>=24.0"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0+unknown"

[tool.hatch.build.targets.wheel]
packages = ["src/context_harness"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
